--- a/book.bib
+++ b/book.bib
@@ -76,3 +76,15 @@
   year={2006},
   publisher={John Wiley \& Sons}
 }
+
+
+@article{reisby1977,
+  title={Imipramine: clinical effects and pharmacokinetic variability},
+  author={Reisby, Niels and Gram, Lars F and Bech, Per and Nagy, Adam and Petersen, Gorm Odden and Ortmann, J{\o}rgen and Ibsen, Ilse and Dencker, Sven J and Jacobsen, Ove and Krautwald, Ole and others},
+  journal={Psychopharmacology},
+  volume={54},
+  number={3},
+  pages={263--272},
+  year={1977},
+  publisher={Springer}
+}
