--- a/packages.bib
+++ b/packages.bib
@@ -160,6 +160,13 @@
   note = {R package version 2018-7.10},
   url = {https://CRAN.R-project.org/package=optimx},
 }
+@Manual{R-pander,
+  title = {pander: An R 'Pandoc' Writer},
+  author = {Gergely Daróczi and Roman Tsegelskyi},
+  year = {2018},
+  note = {R package version 0.6.2},
+  url = {https://CRAN.R-project.org/package=pander},
+}
 @Manual{R-psych,
   title = {psych: Procedures for Psychological, Psychometric, and Personality
 Research},
