--- a/packages.bib
+++ b/packages.bib
@@ -97,12 +97,26 @@
   note = {R package version 1.1.2},
   url = {https://CRAN.R-project.org/package=haven},
 }
+@Manual{R-hexbin,
+  title = {hexbin: Hexagonal Binning Routines},
+  author = {Dan Carr and Nicholas Lewin-Koh and Martin Maechler},
+  year = {2018},
+  note = {R package version 1.27.2},
+  url = {https://CRAN.R-project.org/package=hexbin},
+}
 @Manual{R-HLMdiag,
   title = {HLMdiag: Diagnostic Tools for Hierarchical (Multilevel) Linear Models},
   author = {Adam Loy},
   year = {2015},
   note = {R package version 0.3.1},
   url = {https://CRAN.R-project.org/package=HLMdiag},
+}
+@Manual{R-kableExtra,
+  title = {kableExtra: Construct Complex Table with 'kable' and Pipe Syntax},
+  author = {Hao Zhu},
+  year = {2018},
+  note = {R package version 0.9.0},
+  url = {https://CRAN.R-project.org/package=kableExtra},
 }
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
